<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/LinearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
    android:background="@drawable/background"
	    android:orientation="vertical" >


	    	    <TextView
	        android:id="@+id/textView_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="10dp"
	        android:text="@string/confirm"
	        android:textAlignment="center"
	        android:textSize="23sp"
	        android:textStyle="bold" />

	    <DigitalClock
	        android:id="@+id/digitalClock1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/digitalclock"
	        android:textSize="50sp"
	        android:textStyle="bold" />

	    <LinearLayout
	        android:id="@+id/linearLayout1_1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:gravity="center" >

	        <Button
	            android:id="@+id/button_startWork"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dip"
	            android:height="60dip"
	            android:text="@string/work_start"
	            android:width="100dip" />

	        <Button
	            android:id="@+id/button_endWork"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:height="60dip"
	            android:text="@string/work_end"
	            android:width="100dip" />
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout1_2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:gravity="center" >

	        <Button
	            android:id="@+id/button_startOut"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dip"
	            android:height="60dip"
	            android:text="@string/out_start"
	            android:width="100dip" />

	        <Button
	            android:id="@+id/button_endOut"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:height="60dip"
	            android:text="@string/out_end"
	            android:width="100dip" />
	    </LinearLayout>

	    <Button
	        android:id="@+id/Button_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:background="@android:drawable/ic_menu_manage" />

	</LinearLayout>
	