<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/linearLayout1"
	android:orientation="vertical"
	android:gravity="center"
	android:background="@drawable/background">
	<TextView
		android:textStyle="bold"
		android:layout_height="wrap_content"
		android:textSize="23sp"
		android:id="@+id/textView_date"
		android:layout_width="wrap_content"
		android:layout_marginBottom="0dp"></TextView>

	<TextView
	    android:id="@+id/textView_currentTime"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/dummy"
	    android:textSize="50sp"
	    android:textStyle="bold" >
</TextView>
	<TextView
		android:textStyle="bold"
		android:layout_height="wrap_content"
		android:id="@+id/textView_location"
		android:layout_width="wrap_content"
		android:textSize="15sp"></TextView>
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/dummy"
		android:textSize="40sp"
		android:textStyle="bold"
		android:id="@+id/textView_status" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/confirm"
		android:textStyle="bold"
		android:textSize="23sp"
		android:id="@+id/textView_confirm"
		android:layout_marginTop="5dp" />
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/linearLayout2"
		android:gravity="center"
		android:layout_marginTop="10dp">
		<Button
			android:text="@string/OK"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:width="100dip"
			android:height="60dip"
			android:layout_marginRight="5dip"
			android:id="@+id/button_ok"></Button>
		<Button
			android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:width="100dip"
			android:height="60dip"
			android:layout_marginLeft="5dip"
			android:id="@+id/button_cancel"></Button>
	</LinearLayout>
</LinearLayout>